--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Jazzed-HTML-Exercise</title>
 </head>
 <body>
+    <!-- TITLE Form -->
+    <!-- <h1>Registration Form</h1> -->
+    <!-- ----------Form -------------->
     <h1>Registration Form</h1>
+       
+
+
+    <!-- Fieldset1 -->
+
+
+
+
+     <!-- Fieldset2 -->
+
+
+
+
+      <!-- Fieldset3 -->
 </body>
 </html>
