add fieldset 1 2 and 3

--- a/index.html
+++ b/index.html
@@ -18,16 +18,19 @@
 
 
     <!-- Fieldset1 -->
+        <fieldset>
 
-
-
+        </fieldset>
 
      <!-- Fieldset2 -->
-
-
-
-
+     <fieldset>
+            
+     </fieldset>
       <!-- Fieldset3 -->
+      <fieldset>
+            
+      </fieldset>
+
     </form>
 </body>
 </html>
