Fieldset 1 element content

--- a/index.html
+++ b/index.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&family=Mukta&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&family=Mukta&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Jazzed-HTML-Exercise</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- TITLE Form -->
     <h1>Registration Form</h1>
     <!-- ----------Form -------------->
     <form action="#">
-
-
-    <!-- Fieldset1 -->
-        <fieldset>
-
-        </fieldset>
-
-     <!-- Fieldset2 -->
-     <fieldset>
-            
-     </fieldset>
-      <!-- Fieldset3 -->
+      <!-- Fieldset1 first name,last name,email and password -->
       <fieldset>
-            
+            <label for="#">Enter your First Name</label>
+            <label for="#">Enter your Last Name</label>
+            <label for="#">Enter your Email</label>
+            <label for="3">Enter your Password</label>
       </fieldset>
 
+      <!-- Fieldset2 -->
+      <fieldset>
+
+      </fieldset>
+      <!-- Fieldset3 -->
+      <fieldset>
+
+      </fieldset>
     </form>
-</body>
+  </body>
 </html>
