--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <form action="#">
       <!-- Fieldset1 first name,last name,email and password -->
       <fieldset>
-            <label for="#">Enter your First Name</label>
-            <label for="#">Enter your Last Name</label>
-            <label for="#">Enter your Email</label>
-            <label for="3">Enter your Password</label>
+            <label for="#">Enter your First Name: <input type="text" required></label>
+            <label for="#">Enter your Last Name: <input type="text" required></label>
+            <label for="#">Enter your Email: <input type="email" required></label>
+            <label for="3">Enter your Password: <input type="password" required></label>
       </fieldset>
 
       <!-- Fieldset2 -->
