--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <label for="#">Enter your First Name: <input type="text" required></label>
             <label for="#">Enter your Last Name: <input type="text" required></label>
             <label for="#">Enter your Email: <input type="email" required></label>
-            <label for="3">Enter your Password: <input type="password" required></label>
+            <label for="3">Enter your Password: <input type="password" maxlength="16" required></label>
       </fieldset>
 
       <!-- Fieldset2 -->
