adding radio checkbox

--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
             <label for="#">Enter your First Name: <input type="text" required></label>
             <label for="#">Enter your Last Name: <input type="text" required></label>
             <label for="#">Enter your Email: <input type="email" required></label>
-            <label for="3">Enter your Password: <input type="password" maxlength="16" required></label>
-      </fieldset>
+            <!-- <label for="3">Enter your Password: <input type="password" maxlength="16" pattern="[a-z0-5{8,}]" required></label> -->
+            <label for="3">Enter your Password: <input type="password" maxlength="16" pattern="[a-z0-5]{8}" required></label>
+          </fieldset>
 
       <!-- Fieldset2 -->
       <fieldset>
-
+          <label for="#"><input type="radio" name="" id=""></label>
+          <label for="#"><input type="radio" name="" id=""></label>
+          <label for="#"><input type="checkbox" required></label>
       </fieldset>
       <!-- Fieldset3 -->
       <fieldset>
