Setup name attrib account-type and terms and conditions

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
       <!-- Fieldset2 -->
       <fieldset>
-          <label for="#"><input type="radio" name="" id=""></label>
-          <label for="#"><input type="radio" name="" id=""></label>
-          <label for="#"><input type="checkbox" required></label>
+          <label for="#"><input type="radio" name="" id="">Personal Account</label>
+          <label for="#"><input type="radio" name="account-type" id="">Business Partner Account</label>
+          <label for="#"><input type="checkbox" required> I accept the <a href="#">Term and Conditions</a></label>
       </fieldset>
       <!-- Fieldset3 -->
       <fieldset>
