Adding submit attrib and browse file button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
       </fieldset>
       <!-- Fieldset3 -->
       <fieldset>
-
+          <label>Upload a profile picture:<input type="file"> </label>
+          <input type="submit" value="submit">
       </fieldset>
     </form>
   </body>
