add select dropdown option and text area

--- a/index.html
+++ b/index.html
@@ -36,8 +36,25 @@
       <!-- Fieldset3 -->
       <fieldset>
           <label>Upload a profile picture:<input type="file"> </label>
-          <input type="submit" value="submit">
-      </fieldset>
+          <label for="#">Input you age(years): <input type="number" min="13" max="120"></label>
+          <label for=""> 
+          how did you hear from us
+          <select name="" id="">
+            <label for="">
+              <option value="">(select one)</option>
+              <option value="1">News</option>
+              <option value="2">Blog</option>
+              <option value="3">Forums</option>
+              <option value="4">Others</option>
+            </label>
+          </select>
+        </label>
+        <label for="">
+          Provide a bio:
+          <textarea name="" id="" cols="30" rows="10">Please provide your bio here</textarea>
+        </label>
+        </fieldset>
+      <input type="submit" value="submit">
     </form>
   </body>
 </html>
