add placeholder in the text area

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </label>
         <label for="">
           Provide a bio:
-          <textarea name="" id="" cols="30" rows="10">Please provide your bio here</textarea>
+          <textarea name="" id="" cols="30" rows="10">Provide a Death Note here: </textarea>
         </label>
         </fieldset>
       <input type="submit" value="submit">
