--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <body>
     <!-- TITLE Form -->
     <h1>Registration Form</h1>
+    <p> Please fill out the form below.</p>
     <!-- ----------Form -------------->
     <form action="#">
       <!-- Fieldset1 first name,last name,email and password -->
