apply some basic styling to input text area element

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
     <form action="#">
       <!-- Fieldset1 first name,last name,email and password -->
       <fieldset>
-            <label for="#">Enter your First Name: <input type="text" name="FirstName" required></label>
-            <label for="#">Enter your Last Name: <input type="text" name="LastName" required></label>
-            <label for="#">Enter your Email: <input type="email" name="Email" required></label>
+            <label for="#">Enter your First Name: <input type="text" class="inline" name="FirstName" required></label>
+            <label for="#">Enter your Last Name: <input type="text" class="inline" name="LastName" required></label>
+            <label for="#">Enter your Email: <input type="email" class="inline" name="Email" required></label>
             <!-- <label for="3">Enter your Password: <input type="password" maxlength="16" pattern="[a-z0-5{8,}]" required></label> -->
-            <label for="3">Enter your Password: <input type="password" maxlength="16" pattern="[a-z0-5]{8}" name="password" required></label>
+            <label for="3">Enter your Password: <input type="password" class="inline" maxlength="16" pattern="[a-z0-5]{8}" name="password" required></label>
           </fieldset>
 
       <!-- Fieldset2 -->
       <fieldset>
-          <label for="#"><input type="radio" name="" id="">Personal Account</label>
-          <label for="#"><input type="radio" name="account-type" id="">Business Partner Account</label>
-          <label for="#"><input type="checkbox" required> I accept the <a href="#">Term and Conditions</a></label>
+          <label for="#"><input class="inline" type="radio" name="" id="">Personal Account</label>
+          <label for="#"><input class="inline" type="radio" name="account-type" id="">Business Partner Account</label>
+          <label for="#"><input class="inline" type="checkbox" required> I accept the <a href="#">Term and Conditions</a></label>
       </fieldset>
       <!-- Fieldset3 -->
       <fieldset>
