--- a/index.html
+++ b/index.html
@@ -15,47 +15,86 @@
   </head>
   <body>
     <!-- TITLE Form -->
-    <h1>Registration Form</h1>
-    <p> Please fill out the form below.</p>
+
     <!-- ----------Form -------------->
     <form action="#">
       <!-- Fieldset1 first name,last name,email and password -->
       <fieldset>
-            <label for="#">Enter your First Name: <input type="text" class="inline" name="FirstName" required></label>
-            <label for="#">Enter your Last Name: <input type="text" class="inline" name="LastName" required></label>
-            <label for="#">Enter your Email: <input type="email" class="inline" name="Email" required></label>
-            <!-- <label for="3">Enter your Password: <input type="password" maxlength="16" pattern="[a-z0-5{8,}]" required></label> -->
-            <label for="3">Enter your Password: <input type="password" class="inline" maxlength="16" pattern="[a-z0-5]{8}" name="password" required></label>
-          </fieldset>
+        <h1>Registration Form</h1>
+        <p>Please fill out the form below.</p>
+        <label for="#"
+          >Enter your First Name:
+          <input type="text" class="inline" name="FirstName" required
+        /></label>
+        <label for="#"
+          >Enter your Last Name:
+          <input type="text" class="inline" name="LastName" required
+        /></label>
+        <label for="#"
+          >Enter your Email here:
+          <input type="email" class="inline" name="Email" required
+        /></label>
+        <!-- <label for="3">Enter your Password: <input type="password" maxlength="16" pattern="[a-z0-5{8,}]" required></label> -->
+        <label for="3"
+          >Enter your Password:
+          <input
+            type="password"
+            class="inline"
+            maxlength="16"
+            pattern="[a-z0-5]{8}"
+            name="password"
+            required
+        /></label>
+      </fieldset>
 
       <!-- Fieldset2 -->
       <fieldset>
-          <label for="#"><input class="inline" type="radio" name="" id="">Personal Account</label>
-          <label for="#"><input class="inline" type="radio" name="account-type" id="">Business Partner Account</label>
-          <label for="#"><input class="inline" type="checkbox" required> I accept the <a href="#">Term and Conditions</a></label>
+        <label for="#"
+          ><input class="inline1" type="radio" name="" id="" />Personal
+          Account</label
+        >
+        <label for="#"
+          ><input
+            class="inline1"
+            type="radio"
+            name="account-type"
+            id=""
+          />Business Partner Account</label
+        >
+        <label for="#"
+          ><input class="inline1" type="checkbox" required /> I accept the
+          <a href="#">Term and Conditions</a></label
+        >
       </fieldset>
       <!-- Fieldset3 -->
       <fieldset>
-          <label>Upload a profile picture:<input type="file" name="fileupload"> </label>
-          <label for="#">Input you age(years): <input type="number" name="age" min="13" max="120"></label>
-          <label for=""> 
+        <label
+          >Upload a profile picture:<input type="file" name="fileupload" />
+        </label>
+        <label for="#"
+          >Input you age(years):
+          <input type="number" name="age" min="13" max="120"
+        /></label>
+        <label for="">
           how did you hear from us
           <select name="referer" id="">
             <label for="">
-              <option value="" >(select one)</option>
-              <option value="1"name="News" >News</option>
-              <option value="2"name="blog">Blog</option>
-              <option value="3"name="forums">Forums</option>
-              <option value="4"name="others">Others</option>
+              <option value="">(select one)</option>
+              <option value="1" name="News">News</option>
+              <option value="2" name="blog">Blog</option>
+              <option value="3" name="forums">Forums</option>
+              <option value="4" name="others">Others</option>
             </label>
           </select>
         </label>
         <label for="">
           Provide a bio:
-          <textarea name="" id="" cols="30" rows="10" name="bio">Provide a Death Note here: </textarea>
+          <textarea name="" id="" cols="30" rows="10" name="bio">
+Provide a Death Note here: </textarea
+          >
         </label>
-        </fieldset>
-      <input type="submit" value="submit">
+        <input type="submit" value="submit" />
+      </fieldset>
     </form>
   </body>
 </html>
