Changing the title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Jazzed-HTML-Exercise</title>
+    <title>Jazzed-HTML/CSS-Exercise</title>
   </head>
   <body>
     <!-- TITLE Form -->
